@@ -5,6 +5,7 @@ qtile 0.x.x, released xxxx-xx-xx:
         - allow window state to be hidden on WindowName widget
         - cmd_togroup can move to current group when None sent
         - added MOC playback widget
+        - added memory usage widget
         - log truncation, max log size, and number of log backups configurable
         - add a command to change to specific layout index
           (lazy.to_layout_index(index))
